--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,36 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <%= link_to('Home', home_path) %>
+      |
+      <%# link_to('All Pets', pets_path) %>
+
+      <% if user_signed_in? %>
+        <div class="pull-right">
+          <%# link_to "Hello, #{current_user.first_name}", dashboard_users_path %>
+          <span>Hello, <%= current_user.first_name %></span>
+          <%= link_to 'Sign out', sessions_path, method: :delete %>
+        </div>
+      <%  else %>
+        |
+        <%= link_to 'Log in', new_session_path %>
+        |
+        <%= link_to 'Sign Up', new_user_path %>
+      <% end %>
+
+      <hr>
+
+      <div id="flash-message">
+        <% if flash[:notice] %>
+        <div class='alert alert-success'><%= flash[:notice] %></div>
+        <% elsif flash[:alert] %>
+        <div class='alert alert-danger'><%= flash[:alert] %></div>
+        <% end %>
+      </div>
+
+      <%= yield %>
+    </div>
+
   </body>
 </html>
