--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
       <%= link_to('Home', home_path) %>
       |
       <%# link_to('All Pets', pets_path) %>
+      <!-- | -->
+      <%= link_to 'New Auction', new_auction_path %>
 
       <% if user_signed_in? %>
         <div class="pull-right">
