finished auction crud - destroy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
     <div class="container">
       <%= link_to('Home', home_path) %>
       |
-      <%# link_to('All Pets', pets_path) %>
-      <!-- | -->
+      <%= link_to('All Auctions', auctions_path) %>
+      |
       <%= link_to 'New Auction', new_auction_path %>
 
       <% if user_signed_in? %>
