--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -2,12 +2,15 @@
   <h1><%= @auction.title %></h1>
   <p><%= @auction.details %></p>
 
-  <%= simple_form_for [@auction, @bid] do |f| %>
-    <%= f.input :price, :label => false, wrapper_html: {class: "form-inline"} do %>
-      <%= f.input :price, :label => false%>
-      <%= f.button :submit, "Bid", :class => "btn-primary" %>
+  <% if current_user != @auction.user %>
+    <%= simple_form_for [@auction, @bid] do |f| %>
+      <%= f.input :price, :label => false, wrapper_html: {class: "form-inline"} do %>
+        <%= f.input :price, :label => false%>
+        <%= f.button :submit, "Bid", :class => "btn-primary" %>
+      <% end %>
     <% end %>
   <% end %>
+
 
 
   <h3>Previous Bids</h3>
