finished Track A & B part 3,4,6,7+ disallow users from bidding their own auctions

--- a/app/views/auctions/index.html.erb
+++ b/app/views/auctions/index.html.erb
@@ -1,4 +1,5 @@
 <% @auctions&.each do |auction| %>
   <%= link_to auction.title, auction_path(auction) %>
+  <span>By: <%= auction.user.full_name %></span>
   <hr>
 <% end %>
