--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -2,24 +2,41 @@
   <h1><%= @auction.title %></h1>
   <p><%= @auction.details %></p>
 
-  <% if current_user != @auction.user %>
-    <%= simple_form_for [@auction, @bid] do |f| %>
-      <%= f.input :price, :label => false, wrapper_html: {class: "form-inline"} do %>
-        <%= f.input :price, :label => false%>
-        <%= f.button :submit, "Bid", :class => "btn-primary" %>
+  <div class="watch_button">
+    <%= render "watches/watch", watch: @watch %>
+  </div>
+
+  <% if @auction.may_publish? && current_user == @auction.user%>
+    <%= link_to 'Publish', auction_publishings_path(@auction), method: :post, data: {confirm: 'Ready to publish?'} %>
+  <% end %>
+
+
+  <% if @auction.published? || @auction.reserve_met? %>
+    <% if current_user != @auction.user %>
+      <%= simple_form_for [@auction, @bid] do |f| %>
+        <%= f.input :price, :label => false, wrapper_html: {class: "form-inline"} do %>
+          <%= f.input :price, :label => false%>
+          <%= f.button :submit, "Bid", :class => "btn-primary" %>
+        <% end %>
       <% end %>
+    <% end %>
+
+    <h3>Previous Bids</h3>
+    <% if @auction.bids.length > 0 %>
+      <% @auction.bids.order(created_at: :desc).each do |bid| %>
+        <p>$<%= bid.price %> on
+            <%= bid.created_at.strftime('%b %d %Y') %> at
+            <%= bid.created_at.strftime('%H:%M:%S') %>
+            by <%= bid.user.full_name %></p>
+      <% end %>
+    <% else %>
+      <p>No bids yet for this auction.</p>
     <% end %>
   <% end %>
 
 
 
-  <h3>Previous Bids</h3>
-  <% @auction.bids&.order(created_at: :desc).each do |bid| %>
-    <p>$<%= bid.price %> on
-        <%= bid.created_at.strftime('%b %d %Y') %> at
-        <%= bid.created_at.strftime('%H:%M:%S') %>
-        by <%= bid.user.full_name %></p>
-  <% end %>
+
 </div>
 
 <div class="col-xs-3">
